sync: content by hash — chunked, deduplicated, resumable, never base64 (#274)
Spec bodies and plans and shared files live once in a content-addressed blob store (SHA-256, content-defined chunks of 64 KiB–1 MiB, every chunk verified before it is written); rows and history carry hashes. The sync wire is a byte stream — a JSON line announces, raw bytes follow only a chunk — and content is deduplicated and resumable in both directions: a node pulls a page's content one blob at a time, uploads announce and send only what main lacks, and an interrupted transfer resumes at the chunk it lost. Nothing on any path holds a whole file: ingest, sync, materialization and download stream. One cap, limits.file_max (1 GiB default, at most 8 GiB), replaces the 5 MiB limit. Shared files keep their permission bits end to end. The fleet floor moves to 0.45.0.

A channel left mid-message is never reused by the next type. Upgrading migrates existing content one entity per transaction, resumable and safe to run twice; a migrated revision matches its content at any mode, so the copies the old materializer wrote are not stranded, and scripts keep execute.

Review on top of the agent's work: sail-sync-blobs spec, loop rounds 1–6, and 219dd842.